<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shopping List</string>
    <string name="enter_a_title">Enter a title:</string>
    <string name="enter_a_cost">Enter a cost:</string>
    <string name="enter_a_description">Enter a description:</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_Edit">Edit</string>
    <string name="Edit_item">Edit item</string>
    <string name="add">Add</string>
    <string name="new_item">New Item</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="Purchased">Purchased?</string>


    <string-array name="spinner">
        <item>Food</item>
        <item>Drink</item>
        <item>Other</item>
    </string-array>
</resources>
