<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enter_a_title"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/etCost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enter_a_cost"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enter_a_description"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


</LinearLayout>